<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/calculatorbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:textSize="24dp"
        android:text="@string/angles"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:text="@string/select_a_shape"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnAngleTriangle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/triangle"
        android:background="@drawable/circle"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnAngleQuadrilateral"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/quadrilateral"
        android:background="@drawable/circle"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnAnglePentagon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/pentagon"
        android:background="@drawable/circle"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnAngleHexagon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/hexagon"
        android:background="@drawable/circle"
        android:textColor="@color/white" />

</LinearLayout>