<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/calculatorbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:text="Geometry Calculator" />

    <Button
        android:id="@+id/btnAreaSurfaceAreaAndVolume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:shadowColor="#4D04CF"
        android:text="@string/area_surface_area_and_volume" />

    <Button
        android:id="@+id/btnIntersections"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/intersections" />

    <Button
        android:id="@+id/btnDistance"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/distance" />

    <Button
        android:id="@+id/btnAngles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/angles" />

</LinearLayout>