<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/calculatorbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:text="Calculator Kit"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSimpleCalculator"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/simple_calculator"
        android:background="@drawable/circle"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnGeometryCalculator"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/geometry_calculator"
        android:background="@drawable/circle"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnMatrixCalculator"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/matrix_calculator"
        android:background="@drawable/circle"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnConversionCalculator"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/conversion_calculator"
        android:background="@drawable/circle"
        android:textColor="@color/white"/>

</LinearLayout>